# attitude-control

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  runTests.sh  startUpScript.sh
include/controllers/: passivityBasedAdaptiveControl.h  passivityBasedAdativeControl.h
include/filters/: AHRSKalmanFilter  AHRSKalmanFilter.h  attitudeKalmanFilter.h  multiplicativeExtendedKalmanFilter.h
include/quaternions/: quaternionMath.h
include/registry/: controllerFunctionRegistry.h  filterFunctionRegistry.h
include/types/: controllerTypes.h  filterTypes.h  passivityControlsDataTypes.h  typenames.h
include/utils/: attitudeUtils.h  controlUtils.h  typenames.h
sim/: CMakeLists.txt  gimbal.cpp  gimbalOne.cpp  gimbalTwo.cpp  satellite.cpp  sim.cpp  sim.h
src/: CMakeLists.txt
src/utils/: attitudeUtils.cpp
tests/: CMakeLists.txt
tests/attitudeUtilsTest/: CMakeLists.txt  attitudeUtilsTests.cpp
tests/controlUtilsTest/: CMakeLists.txt  controlUtilsTests.cpp
tests/controllerTests/: CMakeLists.txt  controllerTests.cpp
tests/filterTests/: CMakeLists.txt  filterTests.cpp
